// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> default should render TextArea with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> disabled should render a disabled TextArea 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 csqfTg"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
            disabled=""
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 ebqZnW"
                color="shade.980"
                data-testid="ds-text"
                disabled=""
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 OIkus Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                disabled=""
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> errorText should render TextArea with help text if errorText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hGbqge"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 kjotAU"
              color="negative.900"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> errorText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hGbqge"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                maxlength="10"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 kjotAU"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hCGFPT"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> focus should have focus when TextArea is focused 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 eSRhGc"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText should render TextArea with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                maxlength="10"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
        <div
          class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eSXEJE"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fCJFon Spaceweb__Space-sc-1abqisc-0 coWVhD"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hCGFPT"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 dFPmAI"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <label
        class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF Spaceweb__Space-sc-1abqisc-0 hKAKbW"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 llqqT Spaceweb__Space-sc-1abqisc-0 jstZmD Sizeweb__Size-sc-1e5yf1-0 kDvYWo"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 kvMYDL Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 driWyD Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <label
      class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 kRUpxY Spaceweb__Space-sc-1abqisc-0 ekUIxk"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 llqqT Spaceweb__Space-sc-1abqisc-0 jstZmD Sizeweb__Size-sc-1e5yf1-0 kDvYWo"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 kvMYDL Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 driWyD Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label should render a TextArea with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                id="sample-id"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant should render filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <label
      class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 kRUpxY Spaceweb__Space-sc-1abqisc-0 ekUIxk"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 llqqT Spaceweb__Space-sc-1abqisc-0 jstZmD Sizeweb__Size-sc-1e5yf1-0 kDvYWo"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 kvMYDL Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 driWyD Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="3"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant should render outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="auto"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ffEfQL Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width should render a TextArea with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
    >
      <div
        class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 eYznJc"
      >
        <div
          class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 kxSngp Spaceweb__Space-sc-1abqisc-0 zryoY"
            >
              <label
                class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="small"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 eKIlnO Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
            >
              <textarea
                class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                data-testid="ds-text-area"
                placeholder=""
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
